--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
          <a href="about.html">ABOUT US</a>
          <a href="contact.html">CONTACT US</a>
          <a href="login.html">LOGIN</a>
+         <a href="feedback.html">FEEDBACK</a>
          </div>
           
          <div class="container">
@@ -144,7 +145,7 @@
              <div class="jpeg1">
                 <img src="18.jpeg" alt="18"class="jpeg" >
                 <p class="price">Rs 199</p>
-                <button class="btn1">-</button>
+                <button class="btn1">-</button><br>
                <button class="btn1">+</button>
                
              </div>
