--- a/home1.html
+++ b/home1.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         p{
-            color:skyblue;
+            color:purple;
            font-size: x-large;
            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
            font-weight: bold;
